--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Kelvin van Hoorn
 description: Kelvin van Hoorn's personal website
 
-
+permalink: /:year/:month/:day/:title:output_ext
 
 markdown: kramdown
 theme: null
