--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: Kelvin van Hoorn's personal website
 permalink: /:year/:month/:day/:title:output_ext
 
 google_analytics: G-8P9Z3T84Q4
+# google_analytics: G-4ERF4SWF6C
 
 markdown: kramdown
 theme: null
