Added RSS button

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Kelvin van Hoorn
 description: Kelvin van Hoorn's personal website
+author: Kelvin van Hoorn
 
 permalink: /:year/:month/:day/:title:output_ext
 
