--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ twitter:
 
 permalink: /:year/:month/:day/:title:output_ext
 
-google_analytics: G-8P9Z3T84Q4
+google_analytics: G-VC7QPS7X8J
 # google_analytics: G-4ERF4SWF6C
 
 markdown: kramdown
