--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Kelvin van Hoorn
 tagline: Kelvin van Hoorn's personal website
 description: Kelvin van Hoorn's personal website
 author: Kelvin van Hoorn
+logo: /assets/favicon/favicon.ico
 
 twitter:
   username: kelvinvanhoorn
