--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Kelvin van Hoorn
 tagline: Kelvin van Hoorn's personal website
 description: Kelvin van Hoorn's personal website for showcasing technical art and game development
 author: Kelvin van Hoorn
-image: /assets/favicon/favicon.ico
+# image: /assets/favicon/favicon.ico
 
 twitter:
   username: kelvinvanhoorn
