--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Kelvin van Hoorn
 tagline: Kelvin van Hoorn's personal website
-description: Kelvin van Hoorn's personal website 
+description: Kelvin van Hoorn's personal website for showcasing technical art and game development
 author: Kelvin van Hoorn
 
 twitter:
