--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Kelvin van Hoorn
-tagline: Kelvin van Hoorn's personal website
-description: Kelvin van Hoorn's personal website for showcasing technical art and game development
+description: Kelvin van Hoorn's website for technical art
 author: Kelvin van Hoorn
+image: /assets/favicon/favicon.ico
 
 twitter:
   username: kelvinvanhoorn
