--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Kelvin van Hoorn
+tagline: Kelvin van Hoorn's website for technical art
 description: Kelvin van Hoorn's website for technical art
 author: Kelvin van Hoorn
 
