--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Kelvin van Hoorn
 description: Kelvin van Hoorn's website for technical art
 author: Kelvin van Hoorn
-# image: assets/favicon/favicon.png
+image: assets/favicon/favicon.png
 
 twitter:
   username: kelvinvanhoorn
